bevel modifier not responding #68103

Closed
opened 2019-08-02 05:50:19 +02:00 by Ahmad Junaed · 8 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)
Worked: (optional)

Blender not responding and crashes on bevel modifier
Blender is not responding when changing the outer miter options on bevel modifier from sharp to patch.
This happens not on all objects but only on specific objects.

here is an example, when i change the options of the bevel modifier on slide_high objects, blender stop workings but works fine on other objects.

system-info.txt

bevel_not_responding.png

bevel_not_responding.blend

**System Information** Operating system: Graphics card: **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) Worked: (optional) **Blender not responding and crashes on bevel modifier** Blender is not responding when changing the outer miter options on bevel modifier from sharp to patch. This happens not on all objects but only on specific objects. here is an example, when i change the options of the bevel modifier on slide_high objects, blender stop workings but works fine on other objects. [system-info.txt](https://archive.blender.org/developer/F7643034/system-info.txt) ![bevel_not_responding.png](https://archive.blender.org/developer/F7643037/bevel_not_responding.png) [bevel_not_responding.blend](https://archive.blender.org/developer/F7643039/bevel_not_responding.blend)
Author

Added subscriber: @ahmad.junaed

Added subscriber: @ahmad.junaed
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Howard Trickey was assigned by Jacques Lucke 2019-08-07 16:16:47 +02:00
Member

Looks like there is an infinite loop in adjust_the_cycle_or_chain (the first loop`).

Looks like there is an infinite loop in `adjust_the_cycle_or_chain` (the first loop`).
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Yeah, I looked at this briefly and it doesn't seem like something obvious. It looks like the adjchain is being built in a way that it never comes back to the start boundvert.

Yeah, I looked at this briefly and it doesn't seem like something obvious. It looks like the `adjchain` is being built in a way that it never comes back to the start boundvert.
Member

Thanks. I'll look at this. This code got less obviously correct when I put in miters. I already fixed on case like this; guess I didn't get them all.

Thanks. I'll look at this. This code got less obviously correct when I put in miters. I already fixed on case like this; guess I didn't get them all.

This issue was referenced by 7ba2720a70

This issue was referenced by 7ba2720a70c83eb41f577aae4eb5a3403f6bb6b9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68103
No description provided.