Fix T68103: bevel sometimes infinite loops with patch miter.

Needed to null terminate list of chain to process width adjustments on.